crates/wdl-analysis/tests/validation/duplicate-hints/source.errors
error: task `t` contains a duplicate hints section
   ┌─ tests/validation/duplicate-hints/source.wdl:10:5
   │
 6 │     hints {
   │     ----- first hints section is defined here
   ·
10 │     hints {
   │     ^^^^^ this hints section is a duplicate

error: conflicting task name `t`
   ┌─ tests/validation/duplicate-hints/source.wdl:18:6
   │
 5 │ task t {
   │      - the task with the conflicting name is here
   ·
18 │ task t {
   │      ^ this task conflicts with a previously used name

error: workflow `w` contains a duplicate hints section
   ┌─ tests/validation/duplicate-hints/source.wdl:35:5
   │
31 │     hints {
   │     ----- first hints section is defined here
   ·
35 │     hints {
   │     ^^^^^ this hints section is a duplicate

